2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvibook.c, dviconcat.c:
	Better handling of STDIN/STDOUT on Windows.
	* seetexk.test:
	Make easier to test on Windows.

2023-07-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c:
	Skip Unicode conversion if command line arguments are missing
	in order to prevent unwanted looking for texmf.cnf. (Windows only)

2020-09-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac: SeeTeX Ver.20200908

2020-09-08  Karl Berry  <karl@freefriends.org>

	* dvitodvi.man,
	* dvibook.man: insert date, mention maintained as part of TL.

2020-09-08  Manuel Stoeckl  <texlive@mstoeckl.com>

	* dvitodvi.c,
	* dvibook.c (MAXDVIPAGES): remove; dynamically allocate.
	https://tug.org/pipermail/tex-live/2020-September/046051.html

2020-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac: SeeTeX Ver.20200501
	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c, common.h,
	Makefile.{in,am}, config.h.in, error.h:
	Show version number and bug report address in usage.

2019-02-22  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dviconcat.c: Set DVI ID to 3 if at least one input DVI file
	contains opcode 255.

2017-06-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c, error.h:
	Allow Unicode file names. (Windows only)

2017-06-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvibook.c, dviclass.[ch], dvicodes.h, dviconcat.c,
	dviselect.c, dvitodvi.c: Add support for pTeX tate-kumi
	DVI. The patch is based on the work by H. Kagotani in 1992.
	* dvibook.c: Add -r option to generate right-hand side binding
	books. It would be useful for Japanese tate-kumi documents.
	* dvibook.man: Add -r option.
	* seetexk.test: Add tests for pTeX support.
	* playbook.3, playbook.4, playconc.3, playdvi.3, playsel.3,
	playtate.dvi: Added.
	* Makefile.am: Adjusted for pTeX support.

2017-06-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
