@@ -1,3 +1,7 @@
+2023-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* seetexk.test: Tweak.
+
 2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* dvibook.c, dviconcat.c:
